--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
 
     <div id="wrapper" style="display:none;">
         <div id="infor">
-            <h2>Tên máy: MÁY TARO TAY LB16  </h2>
+            <h2>Tên máy: HÀN MIG CO2 NC SUMIT</h2>
             <ul>
-                <li>Mã tài sản: TAPM16-06-120</li><br>
-                <li>Tính năng: Mài đai nhám</li><br>
-                <li>Nhãn hiệu: Trung Quốc               </li><br>
+                <li>Mã tài sản: WRI350-01-120</li><br>
+                <li>Tính năng: Hàn CO2</li><br>
+                <li>Nhãn hiệu: Sasi tự chế</li><br>
                 <li>
                     <input type="button" value="Thông số nhà sản xuất" onclick="hien()" readonly />
                     <div id="hide" class="hidden">
-                        <p>Model: Không tìm thấy dữ liệu</p>
+                        <p>Model: Không tìm thấy</p>
                         <p>Năm sản xuất: 2020</p>
-                        <p>Nước sản xuất: Trung Quốc               </p>
-                        <p>Chiều dài: 500</p>
-                        <p>Chiều rộng: 200</p>
-                        <p>Chiều cao: 700  </p>
+                        <p>Nước sản xuất: Việt Nam</p>
+                        <p>Chiều dài: 3800</p>
+                        <p>Chiều rộng: 1600</p>
+                        <p>Chiều cao: 1800</p>
                         <p>Trọng lượng tĩnh: 0</p>
                         <p>Lực dập tải động: 0</p>
                         <p>Công năng sử dụng: 0</p>
